# datalink

./: .gitignore  CONSOLIDATION.md  README.md
.github/workflows/: catalog-ci.yml  docs-deploy.yml  fuzz.yml  mutants.yml
browser/: README.md  package.json
browser/src/: extension-host.mjs  fetch-bytes.mjs  index.mjs  polyfill.mjs  resolver.mjs  runtime.mjs  worker-rpc.mjs
components/compression-endpoint/: Cargo.toml  build.sh
components/compression-endpoint/harness-rs/: Cargo.toml
components/compression-endpoint/harness-rs/src/: main.rs
components/compression-endpoint/src/: lib.rs  zstd_ops.rs
components/gdal-endpoint/: .gitignore  Cargo.toml  README.md  build.sh
components/gdal-endpoint/harness-rs/: Cargo.toml
components/gdal-endpoint/harness-rs/src/: main.rs
components/gdal-endpoint/src/: lib.rs  types.rs
components/gdal-endpoint/wit/: world.wit
components/http-endpoint/: Cargo.toml  README.md  build.sh
components/http-endpoint/harness-rs/: Cargo.toml
components/http-endpoint/harness-rs/src/: main.rs
components/http-endpoint/src/: http.rs  lib.rs  types.rs
components/redis-endpoint/: .gitignore  Cargo.toml  README.md  build.sh
components/redis-endpoint/harness-rs/: Cargo.toml
components/redis-endpoint/harness-rs/src/: main.rs
components/redis-endpoint/src/: lib.rs  resp.rs  types.rs
components/s3-endpoint/: Cargo.toml  README.md  build.sh
components/s3-endpoint/harness-rs/: Cargo.toml
components/s3-endpoint/harness-rs/src/: main.rs
components/s3-endpoint/src/: lib.rs  s3.rs  sigv4.rs  types.rs
crates/datalink-contract/: Cargo.toml
crates/datalink-contract/src/: lib.rs
crates/datalink-dynlink/: Cargo.toml
crates/datalink-dynlink/src/: lib.rs  reentrant.rs
crates/datalink-dynlink/tests/: reentrant_streaming.rs
crates/datalink-dynlink/tests/fixtures/: aba-provider.wasm  deep-harness.wasm  deep_engine_provider.wasm  deep_ext_provider.wasm  greet-provider.wasm  reentrant-spi-harness.wasm  sqlite-ext-endpoint-harness.wasm  sqlite_spi_leaf.component.wasm
crates/datalink-dynlink/wit/compose-dynlink/: world.wit
crates/datalink-extcore/: Cargo.toml
crates/datalink-extcore/benches/: scalar_batch.rs
crates/datalink-extcore/src/: declare.rs  lib.rs  shim_columnar_bridge.rs  shim_duckdb.rs  shim_duckdb_agg.rs  shim_embed.rs  shim_sqlite.rs  shim_sqlite_agg.rs
crates/datalink-extcore/tests/: scalar_batch.rs
crates/datalink-policy/: Cargo.toml
crates/datalink-policy/src/: lib.rs
crates/datalink-prefix/: Cargo.toml
crates/datalink-prefix/src/: lib.rs
crates/datalink-shim-codegen-core/: Cargo.toml
crates/datalink-shim-codegen-core/src/: compose_emit.rs  force_link.rs  interface_db.rs  kebab_fix.rs  lib.rs  name_match.rs  override_tables.rs  record_registry.rs  wit_parse.rs  wit_paths.rs
crates/datalink-shim-datafission-emit/: Cargo.toml
crates/datalink-shim-datafission-emit/scripts/: build-bridges.sh
crates/datalink-shim-datafission-emit/src/: dispatch.rs  emit_cargo.rs  emit_dynlink.rs  emit_lib.rs  emit_readme.rs  emit_wit.rs  lib.rs
crates/datalink-shim-datafission-emit/tests/: phase3_dynlink_emit.rs
crates/datalink-shim-duckdb-dynlink-emit/: Cargo.toml
crates/datalink-shim-duckdb-dynlink-emit/src/: emit_dynlink.rs  lib.rs  spatial_catalog.rs  sql_extension_catalog.rs
crates/datalink-shim-duckdb-dynlink-emit/tests/: smoke_emit.rs
crates/datalink-shim-duckdb-emit/: Cargo.toml
crates/datalink-shim-duckdb-emit/src/: dispatch.rs  emit_cargo.rs  emit_lib.rs  emit_readme.rs  emit_wit.rs  handle_table.rs  lib.rs  lifecycle.rs  register.rs
crates/datalink-shim-sqlite-dynlink-emit/: Cargo.toml
crates/datalink-shim-sqlite-dynlink-emit/src/: emit_dynlink.rs  lib.rs  spatial_catalog.rs  sql_extension_catalog.rs
crates/datalink-shim-sqlite-dynlink-emit/tests/: smoke_emit.rs
crates/datalink-shim-sqlite-emit/: Cargo.toml
crates/datalink-shim-sqlite-emit/src/: dispatch.rs  emit_cargo.rs  emit_lib.rs  emit_readme.rs  emit_wit.rs  lib.rs  vtab.rs
crates/datalink-valuemodel/: Cargo.toml
crates/datalink-valuemodel/src/: lib.rs
docs/: networked-extensions-host-bridge.md
extensions/: README.md
extensions/a5-core/: Cargo.toml
extensions/aba-core/: Cargo.toml
extensions/aggstat-core/: Cargo.toml
extensions/ascii85-core/: Cargo.toml
extensions/ascii85-core/src/: lib.rs
extensions/atbash-core/: Cargo.toml
extensions/base45-core/: Cargo.toml
extensions/base45-core/src/: lib.rs
extensions/base58check-core/: Cargo.toml
extensions/base58check-core/src/: lib.rs
extensions/baseN-core/: Cargo.toml
extensions/baseconv-core/: Cargo.toml
extensions/baseconv-core/src/: lib.rs
extensions/bbcode-core/: Cargo.toml
extensions/bbcode-core/src/: lib.rs
extensions/bech32-core/: Cargo.toml
extensions/bech32-core/src/: lib.rs
extensions/bencode-core/: Cargo.toml
extensions/bitfilters-core/: Cargo.toml
extensions/blast-core/: Cargo.toml
extensions/bloom-core/: Cargo.toml
extensions/braille-core/: Cargo.toml
extensions/braille-core/src/: lib.rs
extensions/cardtype-core/: Cargo.toml
extensions/cardtype-core/src/: lib.rs
extensions/casing-core/: Cargo.toml
extensions/casing-core/src/: lib.rs
extensions/cbor-core/: Cargo.toml
extensions/cbor-core/src/: lib.rs
extensions/celestial-core/: Cargo.toml
extensions/celestial-core/src/: lib.rs
extensions/changeset-core/: Cargo.toml
extensions/checkdigit-core/: Cargo.toml
extensions/chrono-core/: Cargo.toml
extensions/color-core/: Cargo.toml
extensions/colorconv-core/: Cargo.toml
extensions/countmin-core/: Cargo.toml
extensions/duckdbcompat-core/: Cargo.toml
extensions/duckdbcompat-core/src/: lib.rs
tooling/: README.md  compat.py  config.schema.json  dlconfig.py  gen.py  identity.py  pyproject.toml  registry.py  scaffold.py  smoke.py  t-status.py  verify.py
tooling/datalink_tooling/: __init__.py  compat.py  dlconfig.py  gen.py  identity.py  registry.py  scaffold.py  smoke.py  tstatus.py  verify.py
tooling/examples/: ducklink.config.json  sqlink.config.json
tooling/spec/: lessons-learned.spec.md
(+283 files in other folders)
