[package]
name = "datalink-dynlink"
version = "0.1.0"
edition = "2021"
description = "Shared, store-generic host machinery for the compose:dynlink/linker WIT package (runtime / dynamic component linking, 'dlopen for components') used by the ducklink and sqlink wasm-component hosts. The resolve/invoke resource-table bridge and the generated linker bindings are shared; the provider lifecycle is a ProviderBackend trait (a resident, instantiate-once-and-reuse backend ships here; fresh-per-invoke + built-in shims are additional backend impls on the consumer side)."
license = "MIT"
repository = "https://github.com/tegmentum/datalink"

[dependencies]
# The component-model engine. Pinned to the version both hosts run (sqlink +
# ducklink are on wasmtime 46.0.1) so the generated component bindings are
# ABI-identical across the consumers (matches datalink-contract).
wasmtime = { version = "46.0.1", features = ["component-model", "async"] }
wasmtime-wasi = "46.0.1"
# Async flavor: boxed-Send futures for the async provider-backend trait and
# the async host methods. sqlink's host is fully async (`bindgen` `default:
# async` -> `async fn` Host methods over a tokio/hickory/reqwest stack), so the
# shared bridge needs an async variant. The sync flavor (ducklink) never
# touches this dependency.
async-trait = "0.1"
# Async resident backend: an async-aware mutex held ACROSS `.await` points
# (the resident store's `instantiate_async` / `call_handle` futures) so a
# resident provider's single Store is serialized without blocking the runtime.
# Only the `sync` feature is pulled (no tokio runtime/net); sqlink (the async
# consumer) already runs on a tokio runtime. The sync flavor (ducklink) never
# touches this dependency.
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
