[package]
name = "datalink-shim-datafission-emit"
version = "0.1.0"
edition = "2021"
description = "Datafission-target emitter for the shim-bridge codegen. Consumes a database-agnostic BridgePlan (from shim-bridge-codegen-core) plus the database-agnostic substrate (datalink-shim-codegen-core) and emits a `wasm32-wasip2` cdylib crate whose component imports the upstream shim's WIT and exports the `datafission:extension@1.0.0` composite world (identity + sql-extension-plugin/metadata + scalar/aggregate/window/table function registries + type-plugin + spatial-index-plugin + system-catalog-plugin + index-plugin). Created as the datafission-targeted sibling to datalink-shim-sqlite-emit and datalink-shim-duckdb-emit."
license = "Apache-2.0"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "datalink_shim_datafission_emit"
path = "src/lib.rs"

[dependencies]
shim-bridge-codegen-core = { git = "https://github.com/tegmentum/shim-bridge-codegen-core.git", rev = "0e25c2929845b9051e8481746f63061a3944037a" }
datalink-shim-codegen-core = { path = "../datalink-shim-codegen-core" }
anyhow = "1"
# Canonical-WIT shape hashing — present for symmetry with the
# sibling emit crates even though the scalar-first cut does not
# exercise typed-value-binding payloads yet. Datafission's
# function-plugin contract uses `binary(list<u8>)` for opaque
# blobs (GEOMETRY WKB, RASTER bytes, TopoGeom bytes) rather than
# a Complex-named arm, so wit-value lift is not on the critical
# path for scalar dispatch.
sha2 = "0.10"
