[package]
name = "datalink-shim-sqlite-dynlink-emit"
version = "0.1.0"
edition = "2021"
description = "Dynlink-mode sqlite-target emitter for the shim-bridge codegen. Consumes a `<extension>-catalog.toml` extension surface (leaves or umbrellas) and emits a `wasm32-wasip2` cdylib bridge crate that imports `compose:dynlink/linker@0.1.0` and exports the canonical `sqlite:extension` contract, routing every dispatch through the resident provider identified by `provider_id`. Phase A sibling of `datalink-shim-duckdb-dynlink-emit`."
license = "Apache-2.0"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "datalink_shim_sqlite_dynlink_emit"
path = "src/lib.rs"

[dependencies]
datalink-shim-codegen-core = { path = "../datalink-shim-codegen-core" }
anyhow = "1"
sha2 = "0.10"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
