[package]
name = "baseconv-core"
version = "0.1.0"
edition = "2021"
description = "Neutral core for the baseconv extension (arbitrary-radix string -> integer)."
license = "MIT"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "baseconv_core"
path = "src/lib.rs"

[dependencies]
datalink-extcore = { path = "../../crates/datalink-extcore" }
