[package]
name = "bbcode-core"
version = "0.1.0"
edition = "2021"
description = "Neutral core for the bbcode extension (BBCode -> HTML)."
license = "MIT"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "bbcode_core"
path = "src/lib.rs"

[dependencies]
datalink-extcore = { path = "../../crates/datalink-extcore" }
