[package]
name = "casing-core"
version = "0.1.0"
edition = "2021"
description = "Neutral core for the casing extension (identifier case conversions via heck)."
license = "MIT"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "casing_core"
path = "src/lib.rs"

[dependencies]
datalink-extcore = { path = "../../crates/datalink-extcore" }
heck = "0.5"
