[package]
name = "celestial-core"
version = "0.1.0"
edition = "2021"
description = "Neutral core for the celestial extension (astronomical coordinate conversions)."
license = "MIT"
repository = "https://github.com/tegmentum/datalink"

[lib]
name = "celestial_core"
path = "src/lib.rs"

[dependencies]
datalink-extcore = { path = "../../crates/datalink-extcore" }
